# installer

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
src/: app.rs  build_info.rs  config.rs  download.rs  format.rs  i18n.rs  main.rs  usb.rs
